--- a/game10/index.html
+++ b/game10/index.html
@@ -42,14 +42,14 @@
 			
 			var game;			
 			window.onload = function() {
-				game = window.game = new Phaser.Game(480, 600, Phaser.AUTO, 'gameContainer');
+				game = window.game = new Phaser.Game(600, 600, Phaser.AUTO, 'gameContainer');
 				game.score = 0;
 
 				game.state.add('Boot', Game10.Boot);
 				game.state.add('Preloader', Game10.Preloader);
 				game.state.add('MainMenu', Game10.MainMenu);
 				game.state.add('Game', Game10.Game);
-				game.state.add('GameOver', Game10.Game);
+				game.state.add('GameOver', Game10.GameOver);
 
 				game.state.start('Boot');
 			};
