--- a/game13/index.html
+++ b/game13/index.html
@@ -15,7 +15,10 @@
 		<script type="text/javascript" src="js/game.js"></script>
 		<script type="text/javascript" src="js/game2.js"></script>
 		<script type="text/javascript" src="js/game3.js"></script>
+		<script type="text/javascript" src="js/game4.js"></script>
+		<script type="text/javascript" src="js/game5.js"></script>
 		<script type="text/javascript" src="js/gameover.js"></script>
+		<script type="text/javascript" src="js/gamewin.js"></script>
 		
 		<!--Helpful stuff-->
 		<script type="text/javascript" src="js/zhelp_fade.js"></script>
@@ -58,7 +61,10 @@
 				game.state.add('Game', Game13.Game);
 				game.state.add('Game2', Game13.Game2);
 				game.state.add('Game3', Game13.Game3);
+				game.state.add('Game4', Game13.Game4);
+				game.state.add('Game5', Game13.Game5);
 				game.state.add('GameOver', Game13.GameOver);
+				game.state.add('GameWin', Game13.GameWin);
 
 				game.state.start('Boot');
 			};
