Game 13 is complete

--- a/game13/index.html
+++ b/game13/index.html
@@ -69,5 +69,6 @@
 				game.state.start('Boot');
 			};
 		</script>
+		Pixelated Cosmos by TeknoAXE is licensed under a Creative Commons Attribution 3.0 Unported License. 
 	</body>
 </html>
